packages/cel-es-antlr4/src/gen/CELParser.ts
// Generated from CEL.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { CELListener } from "./CELListener";
import { CELVisitor } from "./CELVisitor";


export class CELParser extends Parser {
	public static readonly EQUALS = 1;
	public static readonly NOT_EQUALS = 2;
	public static readonly IN = 3;
	public static readonly LESS = 4;
	public static readonly LESS_EQUALS = 5;
	public static readonly GREATER_EQUALS = 6;
	public static readonly GREATER = 7;
	public static readonly LOGICAL_AND = 8;
	public static readonly LOGICAL_OR = 9;
	public static readonly LBRACKET = 10;
	public static readonly RPRACKET = 11;
	public static readonly LBRACE = 12;
	public static readonly RBRACE = 13;
	public static readonly LPAREN = 14;
	public static readonly RPAREN = 15;
	public static readonly DOT = 16;
	public static readonly COMMA = 17;
	public static readonly MINUS = 18;
	public static readonly EXCLAM = 19;
	public static readonly QUESTIONMARK = 20;
	public static readonly COLON = 21;
	public static readonly PLUS = 22;
	public static readonly STAR = 23;
	public static readonly SLASH = 24;
	public static readonly PERCENT = 25;
	public static readonly CEL_TRUE = 26;
	public static readonly CEL_FALSE = 27;
	public static readonly NUL = 28;
	public static readonly WHITESPACE = 29;
	public static readonly COMMENT = 30;
	public static readonly NUM_FLOAT = 31;
	public static readonly NUM_INT = 32;
	public static readonly NUM_UINT = 33;
	public static readonly STRING = 34;
	public static readonly BYTES = 35;
	public static readonly IDENTIFIER = 36;
	public static readonly RULE_start = 0;
	public static readonly RULE_expr = 1;
	public static readonly RULE_conditionalOr = 2;
	public static readonly RULE_conditionalAnd = 3;
	public static readonly RULE_relation = 4;
	public static readonly RULE_calc = 5;
	public static readonly RULE_unary = 6;
	public static readonly RULE_member = 7;
	public static readonly RULE_primary = 8;
	public static readonly RULE_exprList = 9;
	public static readonly RULE_listInit = 10;
	public static readonly RULE_fieldInitializerList = 11;
	public static readonly RULE_optField = 12;
	public static readonly RULE_mapInitializerList = 13;
	public static readonly RULE_optExpr = 14;
	public static readonly RULE_literal = 15;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "expr", "conditionalOr", "conditionalAnd", "relation", "calc", 
		"unary", "member", "primary", "exprList", "listInit", "fieldInitializerList", 
		"optField", "mapInitializerList", "optExpr", "literal",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'=='", "'!='", "'in'", "'<'", "'<='", "'>='", "'>'", "'&&'", 
		"'||'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'.'", "','", "'-'", 
		"'!'", "'?'", "':'", "'+'", "'*'", "'/'", "'%'", "'true'", "'false'", 
		"'null'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "EQUALS", "NOT_EQUALS", "IN", "LESS", "LESS_EQUALS", "GREATER_EQUALS", 
		"GREATER", "LOGICAL_AND", "LOGICAL_OR", "LBRACKET", "RPRACKET", "LBRACE", 
		"RBRACE", "LPAREN", "RPAREN", "DOT", "COMMA", "MINUS", "EXCLAM", "QUESTIONMARK", 
		"COLON", "PLUS", "STAR", "SLASH", "PERCENT", "CEL_TRUE", "CEL_FALSE", 
		"NUL", "WHITESPACE", "COMMENT", "NUM_FLOAT", "NUM_INT", "NUM_UINT", "STRING", 
		"BYTES", "IDENTIFIER",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(CELParser._LITERAL_NAMES, CELParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return CELParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "CEL.g4"; }

	// @Override
	public get ruleNames(): string[] { return CELParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return CELParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(CELParser._ATN, this);
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let _localctx: StartContext = new StartContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, CELParser.RULE_start);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 32;
			_localctx._e = this.expr();
			this.state = 33;
			this.match(CELParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let _localctx: ExprContext = new ExprContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, CELParser.RULE_expr);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 35;
			_localctx._e = this.conditionalOr();
			this.state = 41;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === CELParser.QUESTIONMARK) {
				{
				this.state = 36;
				_localctx._op = this.match(CELParser.QUESTIONMARK);
				this.state = 37;
				_localctx._e1 = this.conditionalOr();
				this.state = 38;
				this.match(CELParser.COLON);
				this.state = 39;
				_localctx._e2 = this.expr();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public conditionalOr(): ConditionalOrContext {
		let _localctx: ConditionalOrContext = new ConditionalOrContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, CELParser.RULE_conditionalOr);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 43;
			_localctx._e = this.conditionalAnd();
			this.state = 48;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CELParser.LOGICAL_OR) {
				{
				{
				this.state = 44;
				_localctx._s9 = this.match(CELParser.LOGICAL_OR);
				_localctx._ops.push(_localctx._s9);
				this.state = 45;
				_localctx._conditionalAnd = this.conditionalAnd();
				_localctx._e1.push(_localctx._conditionalAnd);
				}
				}
				this.state = 50;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public conditionalAnd(): ConditionalAndContext {
		let _localctx: ConditionalAndContext = new ConditionalAndContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, CELParser.RULE_conditionalAnd);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 51;
			_localctx._e = this.relation(0);
			this.state = 56;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === CELParser.LOGICAL_AND) {
				{
				{
				this.state = 52;
				_localctx._s8 = this.match(CELParser.LOGICAL_AND);
				_localctx._ops.push(_localctx._s8);
				this.state = 53;
				_localctx._relation = this.relation(0);
				_localctx._e1.push(_localctx._relation);
				}
				}
				this.state = 58;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public relation(): RelationContext;
	public relation(_p: number): RelationContext;
	// @RuleVersion(0)
	public relation(_p?: number): RelationContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: RelationContext = new RelationContext(this._ctx, _parentState);
		let _prevctx: RelationContext = _localctx;
		let _startState: number = 8;
		this.enterRecursionRule(_localctx, 8, CELParser.RULE_relation, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 60;
			this.calc(0);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 67;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new RelationContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, CELParser.RULE_relation);
					this.state = 62;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 63;
					_localctx._op = this._input.LT(1);
					_la = this._input.LA(1);
					if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CELParser.EQUALS) | (1 << CELParser.NOT_EQUALS) | (1 << CELParser.IN) | (1 << CELParser.LESS) | (1 << CELParser.LESS_EQUALS) | (1 << CELParser.GREATER_EQUALS) | (1 << CELParser.GREATER))) !== 0))) {
						_localctx._op = this._errHandler.recoverInline(this);
					} else {
						if (this._input.LA(1) === Token.EOF) {
							this.matchedEOF = true;
						}

						this._errHandler.reportMatch(this);
						this.consume();
					}
					this.state = 64;
					this.relation(2);
					}
					}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public calc(): CalcContext;
	public calc(_p: number): CalcContext;
	// @RuleVersion(0)
	public calc(_p?: number): CalcContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: CalcContext = new CalcContext(this._ctx, _parentState);
		let _prevctx: CalcContext = _localctx;
		let _startState: number = 10;
		this.enterRecursionRule(_localctx, 10, CELParser.RULE_calc, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 71;
			this.unary();
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 81;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 79;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
					case 1:
						{
						_localctx = new CalcContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, CELParser.RULE_calc);
						this.state = 73;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 74;
						_localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << CELParser.STAR) | (1 << CELParser.SLASH) | (1 << CELParser.PERCENT))) !== 0))) {
							_localctx._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 75;
						this.calc(3);
						}
						break;

					case 2:
						{
						_localctx = new CalcContext(_parentctx, _parentState);
						this.pushNewRecursionContext(_localctx, _startState, CELParser.RULE_calc);
						this.state = 76;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 77;
						_localctx._op = this._input.LT(1);
						_la = this._input.LA(1);
						if (!(_la === CELParser.MINUS || _la === CELParser.PLUS)) {
							_localctx._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 78;
						this.calc(2);
						}
						break;
					}
					}
				}
				this.state = 83;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public unary(): UnaryContext {
		let _localctx: UnaryContext = new UnaryContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, CELParser.RULE_unary);
		let _la: number;
		try {
			let _alt: number;
			this.state = 97;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				_localctx = new MemberExprContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 84;
				this.member(0);
				}
				break;

			case 2:
				_localctx = new LogicalNotContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 86;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 85;
					(_localctx as LogicalNotContext)._s19 = this.match(CELParser.EXCLAM);
					(_localctx as LogicalNotContext)._ops.push((_localctx as LogicalNotContext)._s19);
					}
					}
					this.state = 88;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === CELParser.EXCLAM);
				this.state = 90;
				this.member(0);
				}
				break;

			case 3:
				_localctx = new NegateContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 92;
				this._errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						this.state = 91;
						(_localctx as NegateContext)._s18 = this.match(CELParser.MINUS);
						(_localctx as NegateContext)._ops.push((_localctx as NegateContext)._s18);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 94;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
				} while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER);
				this.state = 96;
				this.member(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public member(): MemberContext;
	public member(_p: number): MemberContext;
	// @RuleVersion(0)
	public member(_p?: number): MemberContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: MemberContext = new MemberContext(this._ctx, _parentState);
		let _prevctx: MemberContext = _localctx;
		let _startState: number = 14;
		this.enterRecursionRule(_localctx, 14, CELParser.RULE_member, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new PrimaryExprContext(_localctx);
			this._ctx = _localctx;
			_prevctx = _localctx;

			this.state = 100;
			this.primary();
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 126;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 124;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
					case 1:
						{
						_localctx = new SelectContext(new MemberContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CELParser.RULE_member);
						this.state = 102;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 103;
						(_localctx as SelectContext)._op = this.match(CELParser.DOT);
						this.state = 105;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === CELParser.QUESTIONMARK) {
							{
							this.state = 104;
							(_localctx as SelectContext)._opt = this.match(CELParser.QUESTIONMARK);
							}
						}

						this.state = 107;
						(_localctx as SelectContext)._id = this.match(CELParser.IDENTIFIER);
						}
						break;

					case 2:
						{
						_localctx = new MemberCallContext(new MemberContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CELParser.RULE_member);
						this.state = 108;
						if (!(this.precpred(this._ctx, 2))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 2)");
						}
						this.state = 109;
						(_localctx as MemberCallContext)._op = this.match(CELParser.DOT);
						this.state = 110;
						(_localctx as MemberCallContext)._id = this.match(CELParser.IDENTIFIER);
						this.state = 111;
						(_localctx as MemberCallContext)._open = this.match(CELParser.LPAREN);
						this.state = 113;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & ((1 << (CELParser.LBRACKET - 10)) | (1 << (CELParser.LBRACE - 10)) | (1 << (CELParser.LPAREN - 10)) | (1 << (CELParser.DOT - 10)) | (1 << (CELParser.MINUS - 10)) | (1 << (CELParser.EXCLAM - 10)) | (1 << (CELParser.CEL_TRUE - 10)) | (1 << (CELParser.CEL_FALSE - 10)) | (1 << (CELParser.NUL - 10)) | (1 << (CELParser.NUM_FLOAT - 10)) | (1 << (CELParser.NUM_INT - 10)) | (1 << (CELParser.NUM_UINT - 10)) | (1 << (CELParser.STRING - 10)) | (1 << (CELParser.BYTES - 10)) | (1 << (CELParser.IDENTIFIER - 10)))) !== 0)) {
							{
							this.state = 112;
							(_localctx as MemberCallContext)._args = this.exprList();
							}
						}

						this.state = 115;
						this.match(CELParser.RPAREN);
						}
						break;

					case 3:
						{
						_localctx = new IndexContext(new MemberContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, CELParser.RULE_member);
						this.state = 116;
						if (!(this.precpred(this._ctx, 1))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
						}
						this.state = 117;
						(_localctx as IndexContext)._op = this.match(CELParser.LBRACKET);
						this.state = 119;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
						if (_la === CELParser.QUESTIONMARK) {
							{
							this.state = 118;
							(_localctx as IndexContext)._opt = this.match(CELParser.QUESTIONMARK);
							}
						}

						this.state = 121;
						(_localctx as IndexContext)._index = this.expr();
						this.state = 122;
						this.match(CELParser.RPRACKET);
						}
						break;
					}
					}
				}
				this.state = 128;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public primary(): PrimaryContext {
		let _localctx: PrimaryContext = new PrimaryContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, CELParser.RULE_primary);
		let _la: number;
		try {
			this.state = 180;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 25, this._ctx) ) {
			case 1:
				_localctx = new IdentOrGlobalCallContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CELParser.DOT) {
					{
					this.state = 129;
					(_localctx as IdentOrGlobalCallContext)._leadingDot = this.match(CELParser.DOT);
					}
				}

				this.state = 132;
				(_localctx as IdentOrGlobalCallContext)._id = this.match(CELParser.IDENTIFIER);
				this.state = 138;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 16, this._ctx) ) {
				case 1:
					{
					this.state = 133;
					(_localctx as IdentOrGlobalCallContext)._op = this.match(CELParser.LPAREN);
					this.state = 135;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & ((1 << (CELParser.LBRACKET - 10)) | (1 << (CELParser.LBRACE - 10)) | (1 << (CELParser.LPAREN - 10)) | (1 << (CELParser.DOT - 10)) | (1 << (CELParser.MINUS - 10)) | (1 << (CELParser.EXCLAM - 10)) | (1 << (CELParser.CEL_TRUE - 10)) | (1 << (CELParser.CEL_FALSE - 10)) | (1 << (CELParser.NUL - 10)) | (1 << (CELParser.NUM_FLOAT - 10)) | (1 << (CELParser.NUM_INT - 10)) | (1 << (CELParser.NUM_UINT - 10)) | (1 << (CELParser.STRING - 10)) | (1 << (CELParser.BYTES - 10)) | (1 << (CELParser.IDENTIFIER - 10)))) !== 0)) {
						{
						this.state = 134;
						(_localctx as IdentOrGlobalCallContext)._args = this.exprList();
						}
					}

					this.state = 137;
					this.match(CELParser.RPAREN);
					}
					break;
				}
				}
				break;

			case 2:
				_localctx = new NestedContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 140;
				this.match(CELParser.LPAREN);
				this.state = 141;
				(_localctx as NestedContext)._e = this.expr();
				this.state = 142;
				this.match(CELParser.RPAREN);
				}
				break;

			case 3:
				_localctx = new CreateListContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 144;
				(_localctx as CreateListContext)._op = this.match(CELParser.LBRACKET);
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 10)) & ~0x1F) === 0 && ((1 << (_la - 10)) & ((1 << (CELParser.LBRACKET - 10)) | (1 << (CELParser.LBRACE - 10)) | (1 << (CELParser.LPAREN - 10)) | (1 << (CELParser.DOT - 10)) | (1 << (CELParser.MINUS - 10)) | (1 << (CELParser.EXCLAM - 10)) | (1 << (CELParser.QUESTIONMARK - 10)) | (1 << (CELParser.CEL_TRUE - 10)) | (1 << (CELParser.CEL_FALSE - 10)) | (1 << (CELParser.NUL - 10)) | (1 << (CELParser.NUM_FLOAT - 10)) | (1 << (CELParser.NUM_INT - 10)) | (1 << (CELParser.NUM_UINT - 10)) | (1 << (CELParser.STRING - 10)) | (1 << (CELParser.BYTES - 10)) | (1 << (CELParser.IDENTIFIER - 10)))) !== 0)) {
					{
					this.state = 145;
					(_localctx as CreateListContext)._elems = this.listInit();
					}
				}

				this.state = 149;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === CELParser.COMMA) {
					{
					this.state = 148;
					this.match(CELParser.COMMA);
					}
				}

				this.state = 151;
				this.match(CELParser.RPRACKET);
				}
				break;
